Updated python file

--- a/NPS_SCORE/Creating_Functions_NPS_Product_Analysis.ipynb
+++ b/NPS_SCORE/Creating_Functions_NPS_Product_Analysis.ipynb
@@ -21,10 +21,10 @@
    "source": [
     "# paths to the CSVs\n",
     "\n",
-    "path_email_file = 'C:/Users/shree/Datacamp_Projects/Writing Functions for Product Analysis/datasets/2020Q4_nps_email.csv'\n",
-    "path_mobile_file = 'C:/Users/shree/Datacamp_Projects/Writing Functions for Product Analysis/datasets/2020Q4_nps_mobile.csv'\n",
-    "path_web_file = 'C:/Users/shree/Datacamp_Projects/Writing Functions for Product Analysis/datasets/2020Q4_nps_web.csv'\n",
-    "path_corrupted_file = 'C:/Users/shree/Datacamp_Projects/Writing Functions for Product Analysis/datasets/corrupted.csv'"
+    "path_email_file = '2020Q4_nps_email.csv'\n",
+    "path_mobile_file = '2020Q4_nps_mobile.csv'\n",
+    "path_web_file = '2020Q4_nps_web.csv'\n",
+    "path_corrupted_file = 'corrupted.csv'"
    ]
   },
   {
